MDEV-7000 Assertion `0' failed in Protocol::end_statement() on executing DDL under innodb_fake_changes=1

correct the if() condition to match the behavior of the old code
that this if() was supposed to replace